--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>website</title>
+	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"/>
+	<script src="https://unpkg.com/feather-icons"></script>
 </head>
 <body>
-	<p>hi there!</p>
+	<div class="heading">
+		<h1>TITLE</h1>
+	</div>
+	<div class="container">
+		<p>Hi! I like doing stuff</p>
+	</div>
+	<script>
+		feather.replace();
+	</script>
 </body>
 </html>
