--- a/about/index.html
+++ b/about/index.html
@@ -9,27 +9,22 @@
 	<script src="https://unpkg.com/feather-icons"></script>
 </head>
 <body>
+<nav>
+	<ul>
+		<li><a class="home" href="../"><i data-feather="droplet"></i></a></li>
+		<li><a class="page1" href="../page1/"><i data-feather="layout"></i></a></li>
+		<li><a class="page2" href="../page2/"><i data-feather="layout"></i></a></li>
+		<li><a class="page3" href="../page3/"><i data-feather="layout"></i></a></li>
+		<li><a class="page4" href="../page4/"><i data-feather="layout"></i></a></li>
+		<li><a class="about activenav" href=""><i data-feather="coffee"></i></a></li>
+	</ul>
+</nav>
 <div id="header">
-	<div class="container">
-		<nav>
-			<!-- <img src="./images/logo.png" class="logo"> -->
-			<ul>
-				<li><a class="shadow home activenav" href=""><i data-feather="droplet"></i></a></li>
-				<li><a class="shadow page1" onclick="open('page1/')"><i data-feather="layout"></i></a></li>
-				<li><a class="shadow page2" onclick="open('page2/')"><i data-feather="layout"></i></a></li>
-				<li><a class="shadow page3" onclick="open('page3/')"><i data-feather="layout"></i></a></li>
-				<li><a class="shadow page4" onclick="open('page4/')"><i data-feather="layout"></i></a></li>
-				<li><a class="shadow about" onclick="open('about/')"><i data-feather="coffee"></i></a></li>
-			</ul>
-		</nav>
-		<div class="shadow header-text">
-			<p>hello</p>
-			<h1>Hi, I'm <span>about page</span> and I like to make all sorts of things!</h1>
-		</div>
-	</div>
+	<p>hello</p>
+	<h1>Hi, I'm <span>about page</span> and I like to make all sorts of things!</h1>
 </div>
-<div class="createdby">
-	<p>Made with <i class="fa-solid fa-fish"></i> by samp</p>
+<div class="footer">
+	<p>Made with <i data-feather="cloud-lightning"></i> by sbird</p>
 </div>
 <script>
 	feather.replace();
