--- a/about/index.html
+++ b/about/index.html
@@ -19,7 +19,7 @@
 		<li><a class="about activenav" href=""><i data-feather="coffee"></i></a></li>
 	</ul>
 </nav>
-<div id="header">
+<div class="header">
 	<p>hello</p>
 	<h1>Hi, I'm <span>about page</span> and I like to make all sorts of things!</h1>
 </div>
