--- a/index.html
+++ b/index.html
@@ -19,16 +19,17 @@
 		<li><a class="about" href="about/"><i data-feather="coffee"></i></a></li>
 	</ul>
 </nav>
-<div id="header">
+<div class="header">
 	<h3>hello</h3>
 	<h1>Hi, I'm <span>sbird</span> and I like to make all sorts of things!</h1>
 </div>
-<div id="social">
+<div class="social">
 	<h2><i data-feather="message-square"></i> Socials</h2>
 	<div class="icons">
 		<a href='https://github.com/swarbler/'><i class="ri-github-fill"></i></a>
 		<a href='https://spenguin.itch.io/'><i class="ri-gamepad-line"></i></a>
 	</div>
+</div>
 <div class="footer">
 	<p>Made with <i data-feather="cloud-lightning"></i> by sbird</p>
 </div>
