--- a/index.html
+++ b/index.html
@@ -24,9 +24,13 @@
 	<h1>Hi, I'm <span>sbird</span> and I like to make all sorts of things!</h1>
 </div>
 <div class="social">
-	<h2><i data-feather="message-square"></i> Socials</h2>
+	<h2><i data-feather="message-circle"></i> Socials</h2>
 	<div class="icons">
 		<a href='https://github.com/swarbler/'><i class="ri-github-fill"></i></a>
+		<a href='https://spenguin.itch.io/'><i class="ri-gamepad-line"></i></a>
+		<a href='https://ohai.social/@splatypus'><i class="ri-mastodon-line"></i></a>
+		<a href='https://spenguin.itch.io/'><i class="ri-gamepad-line"></i></a>
+		<a href='https://spenguin.itch.io/'><i class="ri-gamepad-line"></i></a>
 		<a href='https://spenguin.itch.io/'><i class="ri-gamepad-line"></i></a>
 	</div>
 </div>
