--- a/page3/index.html
+++ b/page3/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>website</title>
+	<title>sbird \_'v'_/</title>
+	<link rel="icon" type="image/x-icon" href="../bird3.svg" class="fav">
 	<link rel="stylesheet" href="../style.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"/>
 	<script src="https://unpkg.com/feather-icons"></script>
