added cards, moved socials to about page

--- a/about/index.html
+++ b/about/index.html
@@ -21,8 +21,48 @@
 	</ul>
 </nav>
 <div class="header">
-	<p>hello</p>
-	<h1>Hi, I'm <span>about page</span> and I like to make all sorts of things!</h1>
+	<h3>hello</h3>
+	<h1>Hi, I'm <span>sbird</span> and I like to make all sorts of things!</h1>
+</div>
+<div class="section example">
+	<h2><i data-feather="align-right"></i> Example</h2>
+	<div class="cards">
+		<a class="card" href="https://spenguin.itch.io">
+			<h3>EXAMPLE 1a</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</a>
+		<a class="card" href="https://spenguin.itch.io">
+			<h3>EXAMPLE 2a</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</a>
+		<a class="card" href="https://spenguin.itch.io">
+			<h3>EXAMPLE 3a</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</a>
+		<a class="card" href="https://spenguin.itch.io">
+			<h3>EXAMPLE 1b</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</a>
+		<a class="card" href="https://spenguin.itch.io">
+			<h3>EXAMPLE 2b</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</a>
+		<a class="card" href="https://spenguin.itch.io">
+			<h3>EXAMPLE 3b</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</a>
+	</div>
+</div>
+<div class="section social">
+	<h2><i data-feather="message-circle"></i> Socials</h2>
+	<div class="icons">
+		<a href='https://github.com/swarbler/'><i class="ri-github-fill"></i></a>
+		<a href='https://spenguin.itch.io/'><i class="ri-gamepad-line"></i></a>
+		<a href='https://ohai.social/@splatypus'><i class="ri-mastodon-line"></i></a>
+		<a href='https://spenguin.itch.io/'><i class="ri-gamepad-line"></i></a>
+		<a href='https://spenguin.itch.io/'><i class="ri-gamepad-line"></i></a>
+		<a href='https://spenguin.itch.io/'><i class="ri-gamepad-line"></i></a>
+	</div>
 </div>
 <div class="footer">
 	<p>Made with <i data-feather="cloud-lightning"></i> by sbird</p>
