--- a/page1/index.html
+++ b/page1/index.html
@@ -21,7 +21,7 @@
 	</ul>
 </nav>
 <div class="header">
-	<p>hello</p>
+	<h3>hello</h3>
 	<h1>Hi, I'm <span>about page</span> and I like to make all sorts of things!</h1>
 </div>
 <div class="footer">
