added tab and float type

--- a/about/index.html
+++ b/about/index.html
@@ -27,27 +27,27 @@
 <div class="section example">
 	<h2><i data-feather="align-right"></i> Example</h2>
 	<div class="cards">
-		<a class="card" href="https://spenguin.itch.io">
+		<a class="float card" href="https://spenguin.itch.io">
 			<h3>EXAMPLE 1a</h3>
 			<p>example paragraph. blah blah blah.</p>
 		</a>
-		<a class="card" href="https://spenguin.itch.io">
+		<a class="float card" href="https://spenguin.itch.io">
 			<h3>EXAMPLE 2a</h3>
 			<p>example paragraph. blah blah blah.</p>
 		</a>
-		<a class="card" href="https://spenguin.itch.io">
+		<a class="float card" href="https://spenguin.itch.io">
 			<h3>EXAMPLE 3a</h3>
 			<p>example paragraph. blah blah blah.</p>
 		</a>
-		<a class="card" href="https://spenguin.itch.io">
+		<a class="float card" href="https://spenguin.itch.io">
 			<h3>EXAMPLE 1b</h3>
 			<p>example paragraph. blah blah blah.</p>
 		</a>
-		<a class="card" href="https://spenguin.itch.io">
+		<a class="float card" href="https://spenguin.itch.io">
 			<h3>EXAMPLE 2b</h3>
 			<p>example paragraph. blah blah blah.</p>
 		</a>
-		<a class="card" href="https://spenguin.itch.io">
+		<a class="float card" href="https://spenguin.itch.io">
 			<h3>EXAMPLE 3b</h3>
 			<p>example paragraph. blah blah blah.</p>
 		</a>
