--- a/index.html
+++ b/index.html
@@ -24,6 +24,31 @@
 	<h3>hello</h3>
 	<h1>Hi, I'm <span>sbird</span> and I like to make all sorts of things!</h1>
 </div>
+<div class="section example">
+	<h2><i data-feather="align-right"></i> Example</h2>
+	<div class="tabs">
+		<a class="float tab" href="https://github.com">
+			<h3>Example 1a</h3>
+			<p>example text. blah blah blah.</p>
+			<img src="https://placehold.co/600x400" alt="placeholder">
+		</a>
+		<a class="float tab" href="https://github.com">
+			<h3>Example 2a</h3>
+			<p>example text. blah blah blah.</p>
+			<img src="https://placehold.co/600x400" alt="placeholder">
+		</a>
+		<a class="float tab" href="https://github.com">
+			<h3>Example 1b</h3>
+			<p>example text. blah blah blah.</p>
+			<img src="https://placehold.co/600x400" alt="placeholder">
+		</a>
+		<a class="float tab" href="https://github.com">
+			<h3>Example 2b</h3>
+			<p>example text. blah blah blah.</p>
+			<img src="https://placehold.co/600x400" alt="placeholder">
+		</a>
+	</div>
+</div>
 <div class="footer">
 	<p>Made with <i data-feather="cloud-lightning"></i> by sbird</p>
 </div>
