--- a/about/index.html
+++ b/about/index.html
@@ -27,27 +27,27 @@
 <div class="section example">
 	<h2><i data-feather="align-right"></i> Example</h2>
 	<div class="cards">
-		<a class="float card" href="https://spenguin.itch.io">
+		<a class="float card" href="https://github.com">
 			<h3>EXAMPLE 1a</h3>
 			<p>example paragraph. blah blah blah.</p>
 		</a>
-		<a class="float card" href="https://spenguin.itch.io">
+		<a class="float card" href="https://github.com">
 			<h3>EXAMPLE 2a</h3>
 			<p>example paragraph. blah blah blah.</p>
 		</a>
-		<a class="float card" href="https://spenguin.itch.io">
+		<a class="float card" href="https://github.com">
 			<h3>EXAMPLE 3a</h3>
 			<p>example paragraph. blah blah blah.</p>
 		</a>
-		<a class="float card" href="https://spenguin.itch.io">
+		<a class="float card" href="https://github.com">
 			<h3>EXAMPLE 1b</h3>
 			<p>example paragraph. blah blah blah.</p>
 		</a>
-		<a class="float card" href="https://spenguin.itch.io">
+		<a class="float card" href="https://github.com">
 			<h3>EXAMPLE 2b</h3>
 			<p>example paragraph. blah blah blah.</p>
 		</a>
-		<a class="float card" href="https://spenguin.itch.io">
+		<a class="float card" href="https://github.com">
 			<h3>EXAMPLE 3b</h3>
 			<p>example paragraph. blah blah blah.</p>
 		</a>
@@ -59,9 +59,9 @@
 		<a href='https://github.com/swarbler/'><i class="ri-github-fill"></i></a>
 		<a href='https://spenguin.itch.io/'><i class="ri-gamepad-line"></i></a>
 		<a href='https://ohai.social/@splatypus'><i class="ri-mastodon-line"></i></a>
-		<a href='https://spenguin.itch.io/'><i class="ri-gamepad-line"></i></a>
-		<a href='https://spenguin.itch.io/'><i class="ri-gamepad-line"></i></a>
-		<a href='https://spenguin.itch.io/'><i class="ri-gamepad-line"></i></a>
+		<a href='https://github.com/'><i class="ri-github-fill"></i></a>
+		<a href='https://github.com/'><i class="ri-github-fill"></i></a>
+		<a href='https://github.com/'><i class="ri-github-fill"></i></a>
 	</div>
 </div>
 <div class="footer">
