--- a/about/index.html
+++ b/about/index.html
@@ -53,15 +53,22 @@
 		</a>
 	</div>
 </div>
-<div class="section social">
+<div class="section inline social">
 	<h2><i data-feather="message-circle"></i> Socials</h2>
 	<div class="icons">
 		<a href='https://github.com/swarbler/'><i class="ri-github-fill"></i></a>
 		<a href='https://spenguin.itch.io/'><i class="ri-gamepad-line"></i></a>
 		<a href='https://ohai.social/@splatypus'><i class="ri-mastodon-line"></i></a>
-		<a href='https://github.com/'><i class="ri-github-fill"></i></a>
-		<a href='https://github.com/'><i class="ri-github-fill"></i></a>
-		<a href='https://github.com/'><i class="ri-github-fill"></i></a>
+	</div>
+</div>
+<div class="section inline forums">
+	<h2><i data-feather="message-circle"></i> Forums</h2>
+	<div class="icons">
+		<a href='https://stackoverflow.com/users/26354611/sbird'><i class="ri-stack-overflow-line"></i></a>
+		<a href='https://www.thecodingforums.com/members/scassowary.107374/'><i class="ri-terminal-box-line"></i></a>
+		<a href='https://forums.tomshardware.com/members/swoodpecker.2992082/'><i class="ri-hammer-line"></i></a>
+		<a href='https://www.techspot.com/community/members/sdove.525943/'><i class="ri-triangle-line"></i></a>
+		<a href='https://linustechtips.com/profile/1162848-spelican/'><i class="ri-corner-left-up-line"></i><i class="ri-text"></i><i class="ri-text"></i></a>
 	</div>
 </div>
 <div class="footer">
