added lists, updated empty page descriptions

--- a/about/index.html
+++ b/about/index.html
@@ -25,7 +25,7 @@
 	<h1>Hi, I'm <span>sbird</span> and I like to make all sorts of things!</h1>
 </div>
 <div class="section example">
-	<h2><i data-feather="align-right"></i> Example</h2>
+	<h2><i data-feather="align-right"></i> Example Cards</h2>
 	<div class="cards">
 		<a class="float card" href="https://github.com">
 			<h3>EXAMPLE 1a</h3>
