--- a/index.html
+++ b/index.html
@@ -25,7 +25,44 @@
 	<h1>Hi, I'm <span>sbird</span> and I like to make all sorts of things!</h1>
 </div>
 <div class="section example">
-	<h2><i data-feather="align-right"></i> Example</h2>
+	<h2><i data-feather="align-right"></i> Example List</h2>
+	<div class="lists">
+		<div class="float list">
+			<h3>EXAMPLE a</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+		<div class="float list">
+			<h3>EXAMPLE b</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+		<div class="float list">
+			<h3>EXAMPLE c</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+		<div class="float list">
+			<h3>EXAMPLE d</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+		<div class="float list">
+			<h3>EXAMPLE e</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+		<div class="float list">
+			<h3>EXAMPLE f</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+		<div class="float list">
+			<h3>EXAMPLE g</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+		<div class="float list">
+			<h3>EXAMPLE h</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+	</div>
+</div>
+<div class="section example">
+	<h2><i data-feather="align-right"></i> Example Tabs</h2>
 	<div class="tabs">
 		<a class="float tab" href="https://github.com">
 			<h3>Example 1a</h3>
