--- a/page1/index.html
+++ b/page1/index.html
@@ -22,7 +22,7 @@
 </nav>
 <div class="header">
 	<h3>hello</h3>
-	<h1>Hi, I'm <span>about page</span> and I like to make all sorts of things!</h1>
+	<h1>Good morning, I'm <span>page1</span> and I like snakes</h1>
 </div>
 <div class="footer">
 	<p>Made with <i data-feather="cloud-lightning"></i> by sbird</p>
