added more example floats, added more icons for footer

--- a/page1/index.html
+++ b/page1/index.html
@@ -24,8 +24,74 @@
 	<h3>hello</h3>
 	<h1>Good morning, I'm <span>page1</span> and I like snakes</h1>
 </div>
+<div class="section example">
+	<h2><i data-feather="align-right"></i> Example List</h2>
+	<div class="lists">
+		<div class="float list">
+			<h3>EXAMPLE a</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+		<div class="float list">
+			<h3>EXAMPLE b</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+		<div class="float list">
+			<h3>EXAMPLE c</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+		<div class="float list">
+			<h3>EXAMPLE d</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+		<div class="float list">
+			<h3>EXAMPLE e</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+		<div class="float list">
+			<h3>EXAMPLE f</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+		<div class="float list">
+			<h3>EXAMPLE g</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+		<div class="float list">
+			<h3>EXAMPLE h</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+	</div>
+</div>
+<div class="section example">
+	<h2><i data-feather="align-right"></i> Example Cards</h2>
+	<div class="cards">
+		<a class="float card" href="https://github.com">
+			<h3>EXAMPLE 1a</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</a>
+		<a class="float card" href="https://github.com">
+			<h3>EXAMPLE 2a</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</a>
+		<a class="float card" href="https://github.com">
+			<h3>EXAMPLE 3a</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</a>
+		<a class="float card" href="https://github.com">
+			<h3>EXAMPLE 1b</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</a>
+		<a class="float card" href="https://github.com">
+			<h3>EXAMPLE 2b</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</a>
+		<a class="float card" href="https://github.com">
+			<h3>EXAMPLE 3b</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</a>
+	</div>
+</div>
 <div class="footer">
-	<p>Made with <i data-feather="cloud-lightning"></i> by sbird</p>
+	<p>Made with <i data-feather="cloud-drizzle"></i> by sbird</p>
 </div>
 <script>
 	feather.replace();
