--- a/about/index.html
+++ b/about/index.html
@@ -72,7 +72,7 @@
 	</div>
 </div>
 <div class="footer">
-	<p>Made with <i data-feather="cloud-lightning"></i> by sbird</p>
+	<p id="footer-msg">Made with <i data-feather="cloud-snow"></i> by sbird</p>
 </div>
 <script>
 	feather.replace();
