--- a/page3/index.html
+++ b/page3/index.html
@@ -90,6 +90,31 @@
 		</div>
 	</div>
 </div>
+<div class="section example">
+	<h2><i data-feather="align-right"></i> Example Tabs</h2>
+	<div class="tabs">
+		<a class="float tab" href="https://github.com">
+			<h3>Example 1a</h3>
+			<p>example text. blah blah blah.</p>
+			<img src="https://placehold.co/600x400" alt="placeholder">
+		</a>
+		<a class="float tab" href="https://github.com">
+			<h3>Example 2a</h3>
+			<p>example text. blah blah blah.</p>
+			<img src="https://placehold.co/600x400" alt="placeholder">
+		</a>
+		<a class="float tab" href="https://github.com">
+			<h3>Example 1b</h3>
+			<p>example text. blah blah blah.</p>
+			<img src="https://placehold.co/600x400" alt="placeholder">
+		</a>
+		<a class="float tab" href="https://github.com">
+			<h3>Example 2b</h3>
+			<p>example text. blah blah blah.</p>
+			<img src="https://placehold.co/600x400" alt="placeholder">
+		</a>
+	</div>
+</div>
 <div class="footer">
 	<p>Made with <i data-feather="cloud-drizzle"></i> by sbird</p>
 </div>
