modified page3 header

--- a/page3/index.html
+++ b/page3/index.html
@@ -22,7 +22,7 @@
 </nav>
 <div class="header">
 	<h3>hello</h3>
-	<h1>Good evening, I'm <span>page3</span> and I like to drink the blood of my enemies...</h1>
+	<h1>Good evening, I'm <span>page3</span> and I firmly believe cereal is a soup</h1>
 </div>
 <div class="section example">
 	<h2><i data-feather="align-right"></i> Example Cards</h2>
