added TXT tabs, TXT class objects scale less

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<li><a class="about" href="about/"><i data-feather="coffee"></i></a></li>
 	</ul>
 </nav>
-<div class="header">
+<div class="header"> 
 	<h3>hello</h3>
 	<h1>Hi, I'm <span>sbird</span> and I like to make all sorts of things!</h1>
 </div>
@@ -87,40 +87,65 @@
 	</div>
 </div>
 <div class="section example">
-	<h2><i data-feather="align-right"></i> Example List-TXT</h2>
+	<h2><i data-feather="align-right"></i> Example TXT List</h2>
 	<div class="lists">
-		<div class="list txt">
+		<div class="txt list">
 			<h3>EXAMPLE a</h3>
 			<p>example paragraph. blah blah blah.</p>
 		</div>
-		<div class="list txt">
+		<div class="txt list">
 			<h3>EXAMPLE b</h3>
 			<p>example paragraph. blah blah blah.</p>
 		</div>
-		<div class="list txt">
+		<div class="txt list">
 			<h3>EXAMPLE c</h3>
 			<p>example paragraph. blah blah blah.</p>
 		</div>
-		<div class="list txt">
+		<div class="txt list">
 			<h3>EXAMPLE d</h3>
 			<p>example paragraph. blah blah blah.</p>
 		</div>
-		<div class="list txt">
+		<div class="txt list">
 			<h3>EXAMPLE e</h3>
 			<p>example paragraph. blah blah blah.</p>
 		</div>
-		<div class="list txt">
+		<div class="txt list">
 			<h3>EXAMPLE f</h3>
 			<p>example paragraph. blah blah blah.</p>
 		</div>
-		<div class="list txt">
+		<div class="txt list">
 			<h3>EXAMPLE g</h3>
 			<p>example paragraph. blah blah blah.</p>
 		</div>
-		<div class="list txt">
+		<div class="txt list">
 			<h3>EXAMPLE h</h3>
 			<p>example paragraph. blah blah blah.</p>
 		</div>
+	</div>
+</div>
+<div class="section example">
+	<h2><i data-feather="align-right"></i> Example TXT Tabs</h2>
+	<div class="tabs">
+		<a class="txt tab" href="https://github.com">
+			<h3>Example 1a</h3>
+			<p>example text. blah blah blah.</p>
+			<img src="https://placehold.co/600x400" alt="placeholder">
+		</a>
+		<a class="txt tab" href="https://github.com">
+			<h3>Example 2a</h3>
+			<p>example text. blah blah blah.</p>
+			<img src="https://placehold.co/600x400" alt="placeholder">
+		</a>
+		<a class="txt tab" href="https://github.com">
+			<h3>Example 1b</h3>
+			<p>example text. blah blah blah.</p>
+			<img src="https://placehold.co/600x400" alt="placeholder">
+		</a>
+		<a class="txt tab" href="https://github.com">
+			<h3>Example 2b</h3>
+			<p>example text. blah blah blah.</p>
+			<img src="https://placehold.co/600x400" alt="placeholder">
+		</a>
 	</div>
 </div>
 <div class="footer">
