--- a/page2/index.html
+++ b/page2/index.html
@@ -25,24 +25,24 @@
 	<h1>Hi, I'm <span>page2</span> and I like making pasta</h1>
 </div>
 <div class="section example">
-	<h2><i data-feather="align-right"></i> Example Tabs</h2>
+	<h2><i data-feather="align-right"></i> Example TXT Tabs</h2>
 	<div class="tabs">
-		<a class="float tab" href="https://github.com">
+		<a class="txt tab" href="https://github.com">
 			<h3>Example 1a</h3>
 			<p>example text. blah blah blah.</p>
 			<img src="https://placehold.co/600x400" alt="placeholder">
 		</a>
-		<a class="float tab" href="https://github.com">
+		<a class="txt tab" href="https://github.com">
 			<h3>Example 2a</h3>
 			<p>example text. blah blah blah.</p>
 			<img src="https://placehold.co/600x400" alt="placeholder">
 		</a>
-		<a class="float tab" href="https://github.com">
+		<a class="txt tab" href="https://github.com">
 			<h3>Example 1b</h3>
 			<p>example text. blah blah blah.</p>
 			<img src="https://placehold.co/600x400" alt="placeholder">
 		</a>
-		<a class="float tab" href="https://github.com">
+		<a class="txt tab" href="https://github.com">
 			<h3>Example 2b</h3>
 			<p>example text. blah blah blah.</p>
 			<img src="https://placehold.co/600x400" alt="placeholder">
