added txt cards and mixed objects

--- a/page3/index.html
+++ b/page3/index.html
@@ -25,38 +25,38 @@
 	<h1>Good evening, I'm <span>page3</span> and I firmly believe cereal is a soup</h1>
 </div>
 <div class="section example">
-	<h2><i data-feather="align-right"></i> Example Cards</h2>
+	<h2><i data-feather="align-right"></i> Example TXT Cards</h2>
 	<div class="cards">
-		<a class="float card" href="https://github.com">
+		<a class="txt card" href="https://github.com">
 			<h3>EXAMPLE 1a</h3>
 			<p>example paragraph. blah blah blah.</p>
 		</a>
-		<a class="float card" href="https://github.com">
+		<a class="txt card" href="https://github.com">
 			<h3>EXAMPLE 2a</h3>
 			<p>example paragraph. blah blah blah.</p>
 		</a>
-		<a class="float card" href="https://github.com">
+		<a class="txt card" href="https://github.com">
 			<h3>EXAMPLE 3a</h3>
 			<p>example paragraph. blah blah blah.</p>
 		</a>
-		<a class="float card" href="https://github.com">
+		<a class="txt card" href="https://github.com">
 			<h3>EXAMPLE 1b</h3>
 			<p>example paragraph. blah blah blah.</p>
 		</a>
-		<a class="float card" href="https://github.com">
+		<a class="txt card" href="https://github.com">
 			<h3>EXAMPLE 2b</h3>
 			<p>example paragraph. blah blah blah.</p>
 		</a>
-		<a class="float card" href="https://github.com">
+		<a class="txt card" href="https://github.com">
 			<h3>EXAMPLE 3b</h3>
 			<p>example paragraph. blah blah blah.</p>
 		</a>
 	</div>
 </div>
 <div class="section example">
-	<h2><i data-feather="align-right"></i> Example List</h2>
+	<h2><i data-feather="align-right"></i> Example Mixed List</h2>
 	<div class="lists">
-		<div class="float list">
+		<div class="txt list">
 			<h3>EXAMPLE a</h3>
 			<p>example paragraph. blah blah blah.</p>
 		</div>
@@ -64,7 +64,7 @@
 			<h3>EXAMPLE b</h3>
 			<p>example paragraph. blah blah blah.</p>
 		</div>
-		<div class="float list">
+		<div class="txt list">
 			<h3>EXAMPLE c</h3>
 			<p>example paragraph. blah blah blah.</p>
 		</div>
@@ -72,7 +72,7 @@
 			<h3>EXAMPLE d</h3>
 			<p>example paragraph. blah blah blah.</p>
 		</div>
-		<div class="float list">
+		<div class="txt list">
 			<h3>EXAMPLE e</h3>
 			<p>example paragraph. blah blah blah.</p>
 		</div>
@@ -80,7 +80,7 @@
 			<h3>EXAMPLE f</h3>
 			<p>example paragraph. blah blah blah.</p>
 		</div>
-		<div class="float list">
+		<div class="txt list">
 			<h3>EXAMPLE g</h3>
 			<p>example paragraph. blah blah blah.</p>
 		</div>
