--- a/index.html
+++ b/index.html
@@ -87,6 +87,35 @@
 	</div>
 </div>
 <div class="section example">
+	<h2><i data-feather="align-right"></i> Example Cards</h2>
+	<div class="cards">
+		<a class="float card" href="https://github.com">
+			<h3>EXAMPLE 1a</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</a>
+		<a class="float card" href="https://github.com">
+			<h3>EXAMPLE 2a</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</a>
+		<a class="float card" href="https://github.com">
+			<h3>EXAMPLE 3a</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</a>
+		<a class="float card" href="https://github.com">
+			<h3>EXAMPLE 1b</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</a>
+		<a class="float card" href="https://github.com">
+			<h3>EXAMPLE 2b</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</a>
+		<a class="float card" href="https://github.com">
+			<h3>EXAMPLE 3b</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</a>
+	</div>
+</div>
+<div class="section example">
 	<h2><i data-feather="align-right"></i> Example TXT List</h2>
 	<div class="lists">
 		<div class="txt list">
@@ -145,6 +174,35 @@
 			<h3>Example 2b</h3>
 			<p>example text. blah blah blah.</p>
 			<img src="https://placehold.co/600x400" alt="placeholder">
+		</a>
+	</div>
+</div>
+<div class="section example">
+	<h2><i data-feather="align-right"></i> Example Cards</h2>
+	<div class="cards">
+		<a class="txt card" href="https://github.com">
+			<h3>EXAMPLE 1a</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</a>
+		<a class="txt card" href="https://github.com">
+			<h3>EXAMPLE 2a</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</a>
+		<a class="txt card" href="https://github.com">
+			<h3>EXAMPLE 3a</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</a>
+		<a class="txt card" href="https://github.com">
+			<h3>EXAMPLE 1b</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</a>
+		<a class="txt card" href="https://github.com">
+			<h3>EXAMPLE 2b</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</a>
+		<a class="txt card" href="https://github.com">
+			<h3>EXAMPLE 3b</h3>
+			<p>example paragraph. blah blah blah.</p>
 		</a>
 	</div>
 </div>
