--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 	</div>
 </div>
 <div class="section example">
-	<h2><i data-feather="align-right"></i> Example Cards</h2>
+	<h2><i data-feather="align-right"></i> Example TXT Cards</h2>
 	<div class="cards">
 		<a class="txt card" href="https://github.com">
 			<h3>EXAMPLE 1a</h3>
