added timeline object

--- a/index.html
+++ b/index.html
@@ -206,6 +206,53 @@
 		</a>
 	</div>
 </div>
+<div class="section example">
+	<h2><i data-feather="align-right"></i> Example Timeline</h2>
+	<div class="timeline">
+		<div class="point">
+			<i data-feather="arrow-right"></i>
+			<div class="ptext">
+				<h3>EXAMPLE 2001</h3>
+				<p>example paragraph. blah blah blah.</p>
+			</div>
+		</div>
+		<div class="point">
+			<i data-feather="arrow-right"></i>
+			<div class="ptext">
+				<h3>EXAMPLE 2003</h3>
+				<p>example paragraph. blah blah blah.</p>
+			</div>
+		</div>
+		<div class="point">
+			<i data-feather="arrow-right"></i>
+			<div class="ptext">
+				<h3>EXAMPLE 2004.A</h3>
+				<p>example paragraph. blah blah blah.</p>
+			</div>
+		</div>
+		<div class="point">
+			<i data-feather="arrow-right"></i>
+			<div class="ptext">
+				<h3>EXAMPLE 2004.B</h3>
+				<p>example paragraph. blah blah blah.</p>
+			</div>
+		</div>
+		<div class="point">
+			<i data-feather="arrow-right"></i>
+			<div class="ptext">
+				<h3>EXAMPLE 2005</h3>
+				<p>example paragraph. blah blah blah.</p>
+			</div>
+		</div>
+		<div class="point">
+			<i data-feather="arrow-right"></i>
+			<div class="ptext">
+				<h3>EXAMPLE 2006</h3>
+				<p>example paragraph. blah blah blah.</p>
+			</div>
+		</div>
+	</div>
+</div>
 <div class="footer">
 	<p>Made with <i data-feather="cloud-lightning"></i> by sbird</p>
 </div>
