--- a/page1/index.html
+++ b/page1/index.html
@@ -62,6 +62,53 @@
 	</div>
 </div>
 <div class="section example">
+	<h2><i data-feather="align-right"></i> Example Timeline</h2>
+	<div class="timeline">
+		<div class="point">
+			<i data-feather="arrow-right"></i>
+			<div class="ptext">
+				<h3>EXAMPLE 2001</h3>
+				<p>example paragraph. blah blah blah.</p>
+			</div>
+		</div>
+		<div class="point">
+			<i data-feather="arrow-right"></i>
+			<div class="ptext">
+				<h3>EXAMPLE 2003</h3>
+				<p>example paragraph. blah blah blah.</p>
+			</div>
+		</div>
+		<div class="point">
+			<i data-feather="arrow-right"></i>
+			<div class="ptext">
+				<h3>EXAMPLE 2004.A</h3>
+				<p>example paragraph. blah blah blah.</p>
+			</div>
+		</div>
+		<div class="point">
+			<i data-feather="arrow-right"></i>
+			<div class="ptext">
+				<h3>EXAMPLE 2004.B</h3>
+				<p>example paragraph. blah blah blah.</p>
+			</div>
+		</div>
+		<div class="point">
+			<i data-feather="arrow-right"></i>
+			<div class="ptext">
+				<h3>EXAMPLE 2005</h3>
+				<p>example paragraph. blah blah blah.</p>
+			</div>
+		</div>
+		<div class="point">
+			<i data-feather="arrow-right"></i>
+			<div class="ptext">
+				<h3>EXAMPLE 2006</h3>
+				<p>example paragraph. blah blah blah.</p>
+			</div>
+		</div>
+	</div>
+</div>
+<div class="section example">
 	<h2><i data-feather="align-right"></i> Example Cards</h2>
 	<div class="cards">
 		<a class="float card" href="https://github.com">
