added bx-section, changed dark float background to lighter colour

--- a/index.html
+++ b/index.html
@@ -253,6 +253,97 @@
 		</div>
 	</div>
 </div>
+<div class="bx-section example">
+	<h2><i data-feather="align-right"></i> Example BX List</h2>
+	<div class="lists">
+		<div class="float list">
+			<h3>EXAMPLE a</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+		<div class="float list">
+			<h3>EXAMPLE b</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+		<div class="float list">
+			<h3>EXAMPLE c</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+		<div class="float list">
+			<h3>EXAMPLE d</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+		<div class="float list">
+			<h3>EXAMPLE e</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+		<div class="float list">
+			<h3>EXAMPLE f</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+		<div class="float list">
+			<h3>EXAMPLE g</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+		<div class="float list">
+			<h3>EXAMPLE h</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+	</div>
+</div>
+<div class="bx-section example">
+	<h2><i data-feather="align-right"></i> Example BX Tabs</h2>
+	<div class="tabs">
+		<a class="float tab" href="https://github.com">
+			<h3>Example 1a</h3>
+			<p>example text. blah blah blah.</p>
+			<img src="https://placehold.co/600x400" alt="placeholder">
+		</a>
+		<a class="float tab" href="https://github.com">
+			<h3>Example 2a</h3>
+			<p>example text. blah blah blah.</p>
+			<img src="https://placehold.co/600x400" alt="placeholder">
+		</a>
+		<a class="float tab" href="https://github.com">
+			<h3>Example 1b</h3>
+			<p>example text. blah blah blah.</p>
+			<img src="https://placehold.co/600x400" alt="placeholder">
+		</a>
+		<a class="float tab" href="https://github.com">
+			<h3>Example 2b</h3>
+			<p>example text. blah blah blah.</p>
+			<img src="https://placehold.co/600x400" alt="placeholder">
+		</a>
+	</div>
+</div>
+<div class="bx-section example">
+	<h2><i data-feather="align-right"></i> Example BX Cards</h2>
+	<div class="cards">
+		<a class="float card" href="https://github.com">
+			<h3>EXAMPLE 1a</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</a>
+		<a class="float card" href="https://github.com">
+			<h3>EXAMPLE 2a</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</a>
+		<a class="float card" href="https://github.com">
+			<h3>EXAMPLE 3a</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</a>
+		<a class="float card" href="https://github.com">
+			<h3>EXAMPLE 1b</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</a>
+		<a class="float card" href="https://github.com">
+			<h3>EXAMPLE 2b</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</a>
+		<a class="float card" href="https://github.com">
+			<h3>EXAMPLE 3b</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</a>
+	</div>
+</div>
 <div class="footer">
 	<p>Made with <i data-feather="cloud-lightning"></i> by sbird</p>
 </div>
