--- a/page2/index.html
+++ b/page2/index.html
@@ -86,8 +86,8 @@
 		</div>
 	</div>
 </div>
-<div class="section example">
-	<h2><i data-feather="align-right"></i> Example List 2</h2>
+<div class="bx-section example">
+	<h2><i data-feather="align-right"></i> Example BX List</h2>
 	<div class="lists">
 		<div class="float list">
 			<h3>EXAMPLE a</h3>
