--- a/page3/index.html
+++ b/page3/index.html
@@ -90,8 +90,8 @@
 		</div>
 	</div>
 </div>
-<div class="section example">
-	<h2><i data-feather="align-right"></i> Example Tabs</h2>
+<div class="bx-section example">
+	<h2><i data-feather="align-right"></i> Example BX Tabs</h2>
 	<div class="tabs">
 		<a class="float tab" href="https://github.com">
 			<h3>Example 1a</h3>
