--- a/page4/index.html
+++ b/page4/index.html
@@ -24,8 +24,8 @@
 	<h3>hello</h3>
 	<h1>Hey there! I'm <span>page4</span> and I enjoy reading some good books</h1>
 </div>
-<div class="section example">
-	<h2><i data-feather="align-right"></i> Example List</h2>
+<div class="bx-section example">
+	<h2><i data-feather="align-right"></i> Example BX List</h2>
 	<div class="lists">
 		<div class="float list">
 			<h3>EXAMPLE a</h3>
@@ -84,6 +84,43 @@
 			<p>example text. blah blah blah.</p>
 			<img src="https://placehold.co/600x400" alt="placeholder">
 		</a>
+	</div>
+</div>
+<div class="section example">
+	<h2><i data-feather="align-right"></i> Example List</h2>
+	<div class="lists">
+		<div class="float list">
+			<h3>EXAMPLE a</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+		<div class="float list">
+			<h3>EXAMPLE b</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+		<div class="float list">
+			<h3>EXAMPLE c</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+		<div class="float list">
+			<h3>EXAMPLE d</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+		<div class="float list">
+			<h3>EXAMPLE e</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+		<div class="float list">
+			<h3>EXAMPLE f</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+		<div class="float list">
+			<h3>EXAMPLE g</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+		<div class="float list">
+			<h3>EXAMPLE h</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
 	</div>
 </div>
 <div class="section example">
