finished rainforest page, added boxicons, adjusted bx-section floats, added big-list

--- a/rainforest/index.html
+++ b/rainforest/index.html
@@ -7,6 +7,7 @@
 	<link rel="icon" type="image/x-icon" href="../kiwi.svg" class="fav">
 	<link rel="stylesheet" href="../style.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"/>
+	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 	<script src="https://unpkg.com/feather-icons"></script>
 </head>
 <body>
@@ -25,7 +26,7 @@
 	<h1>The <span>Deforestation</span> of the <span>Amazon Rainforest</span></h1>
 </div>
 <div class="section facts">
-	<h2><i data-feather="align-right"></i> Facts about the Amazon Rainforest</h2>
+	<h2><i data-feather="align-right"></i> Facts</h2>
 	<div class="lists">
 		<div class="float list">
 			<h3><i class="ri-tree-line"></i> World's Largest Rainforest</h3>
@@ -33,15 +34,15 @@
 		</div>
 		<div class="float list">
 			<h3><i class="ri-bug-line"></i> Rich Biodiversity</h3>
-			<p>Contains 10% of the world's biodiversity</p>
+			<p>The Amazon contains 10% of the world's biodiversity! It is a rich ecosystem of plants, birds, fish, mammals, and insects!</p>
 		</div>
 		<div class="float list">
-			<h3>EXAMPLE c</h3>
-			<p>example paragraph. blah blah blah.</p>
+			<h3><i class="ri-leaf-line"></i> Poor Soil</h3>
+			<p>Most of the nutrients are located in the top soil, which can be washed away by rainfall. The soil underneath appears reddish as it is rich in iron.</p>
 		</div>
 		<div class="float list">
-			<h3>EXAMPLE d</h3>
-			<p>example paragraph. blah blah blah.</p>
+			<h3><i class="ri-drop-line"></i> Amazon River</h3>
+			<p>The longest river in the world, or second longest if the Nile is longer. No one really knows, it's hard to measure. It is, however, the largest river in the world by discharge volume of water.</p>
 		</div>
 	</div>
 </div>
@@ -57,90 +58,92 @@
 		<div class="center float list">
 			<h3><i class="ri-water-percent-line"></i> Humid and Wet</h3>
 		</div>
-		<div class="center float list">
-			<h3><i class="ri-water-percent-line"></i> Humid and Wet</h3>
-		</div>
 	</div>
 </div>
 <div class="section adaptations-animals">
 	<h2><i data-feather="align-right"></i> Adaptations of Animals</h2>
 	<div class="tabs">
-		<a class="float tab" href="https://github.com">
+		<div class="float tab">
 			<h3>Poison Dart Frog</h3>
 			<p>The bright colour serves as a warning to predators of its toxicity There are also some other species of frog that aren't poisonous that copy the appearance of poison dart frogs!</p>
 			<img src="../images/poison-dart-frog.jpg" alt="placeholder">
-		</a>
-		<a class="float tab" href="https://github.com">
+		</div>
+		<div class="float tab">
 			<h3>Spider Monkey</h3>
 			<p>Its prehensile tail allow the spider monkey to hang and swing from tree branches. The tail can also pick up fruit and throw things!</p>
 			<img src="../images/spider-monkey.jpg" alt="placeholder">
-		</a>
-		<a class="float tab" href="https://github.com">
+		</div>
+		<div class="float tab">
 			<h3>Jaguar</h3>
 			<p>They are excellent swimmers, adapted to the wet environment of the rainforest. They can move slowly and silently when stalking prey. Their spots also help them blend into the trees.</p>
 			<img src="../images/jaguar.jpg" alt="placeholder">
-		</a>
-		<a class="float tab" href="https://github.com">
+		</div>
+		<div class="float tab">
 			<h3>Sloths</h3>
 			<p>Their grey-brown fur helps them blend into tree trunks, camouflaging them from predators. Their thick, dense coats help them keep dry in the rain. Sloths are very slow because they have a prolonged metabolism, meaning they can stay in the same tree for days before going down to the ground to get food.</p>
 			<img src="../images/sloth.jpg" alt="placeholder">
-		</a>
+		</div>
 	</div>
 </div>
-<div class="section adaptations-animals">
+<div class="section adaptations-plants">
 	<h2><i data-feather="align-right"></i> Adaptations of Plants</h2>
 	<div class="tabs">
-		<a class="float tab" href="https://github.com">
+		<div class="float tab" href="https://github.com">
 			<h3>Wide Roots</h3>
 			<p>Trees have thick, strong buttress roots to support them as they grow very tall. Also, as the nutrients are located in the top soil, tree roots grow wide rather than deep.</p>
-			<img src="../images/wide-roots.jpg" alt="placeholder">
-		</a>
-		<a class="float tab" href="https://github.com">
+			<img src="../images/wide-roots.jpg" alt="image of wide tree roots">
+		</div>
+		<div class="float tab" href="https://github.com">
 			<h3>Drip Tips</h3>
 			<p>The pointed tips of leaves channel water so that the weight of the water does not damage the plant. The waxy coating of the leaves also helps repel rain.</p>
-			<img src="../images/drip-tip.jpg" alt="placeholder">
-		</a>
-		<a class="float tab" href="https://github.com">
+			<img src="../images/drip-tip.jpg" alt="closeup image of leaves">
+		</div>
+		<div class="float tab" href="https://github.com">
 			<h3>More Photosynthesis!</h3>
 			<p>Leaves under the canopy are much larger to absorb more light, and the stems are flexible to allow the leaves to move with the sun.</p>
-			<img src="../images/drip-tip.jpg" alt="placeholder">
-		</a>
+			<img src="../images/big-leaf.jpg" alt="man next to a large leaf">
+		</div>
+		<div class="float tab">
+			<h3>Climbing Vines</h3>
+			<p>Epiphytes are plants that grow on the surface of another plant. Lianas (vines) grow around trees as they climb to reach sunlight.</p>
+			<img src="../images/epiphytes.jpg" alt="vines wrapping around a tree trunk">
+		</div>
 	</div>
 </div>
 <div class="bx-section example">
-	<h2><i data-feather="align-right"></i> Example List</h2>
+	<h2><i data-feather="align-right"></i> Causes of Deforestation</h2>
 	<div class="lists">
-		<div class="float list">
-			<h3>EXAMPLE a</h3>
-			<p>example paragraph. blah blah blah.</p>
+		<div class="float big-list">
+			<h3><i class='bx bxs-factory'></i> Commercial Cattle Farming</h3>
+			<p>It causes 80% of the deforestation in the Amazon! As more people consume a westernised diet and demand for beef grows, more land is needed for rearing cattle. Land can't be used for cattle farming for long as cattle eat the top soil, meaning once the soil is depleted of nutrients, they must move and destroy more rainforest.</p>
+		</div>
+		<div class="float big-list">
+			<h3><i class='bx bx-leaf'></i> Commercial Crop Farming</h3>
+			<p>This also requires a lot of land to be deforested, causing 10% of deforestation in the Amazon. The major crop grown is soybeans. Soy isn't just used to tofu and soy milk, it's primarily used to feed livestock such as cattle. Soybean farming in the Amazon has doubled 1990 and 2010.</p>
+		</div>
+		<div class="float big-list">
+			<h3><i class='bx bx-building-house'></i> Settlements</h3>
+			<p>Urbanisation and growth of cities such as Manaus in Brazil is destroying the rainforest. Not only that, other causes of deforestation such as logging or mining require workers. This mean more homes need to be built for them and their families, causing even more deforestation!</p>
 		</div>
 		<div class="float list">
-			<h3>EXAMPLE b</h3>
-			<p>example paragraph. blah blah blah.</p>
+			<h3><i class='bx bxs-tree'></i> Logging</h3>
+			<p>Woods such as mahogany and teak are used for furniture, creating an economic incentive to chop down trees in the rainforest.</p>
 		</div>
 		<div class="float list">
-			<h3>EXAMPLE c</h3>
-			<p>example paragraph. blah blah blah.</p>
+			<h3><i class='bx bxs-pyramid'></i> Mineral Extraction</h3>
+			<p>Sought after minerals such as gold and silver is found in the Amazon Rainforest. The mines cause deforestation and river pollution.</p>
 		</div>
 		<div class="float list">
-			<h3>EXAMPLE d</h3>
-			<p>example paragraph. blah blah blah.</p>
+			<h3><i class="ri-government-line"></i> Government Policies</h3>
+			<p>Policies that promote agriculture and public land allocation can accelerate the rate of deforestation.</p>
+		</div>
+		<div class="float big-list">
+			<h3><i class="ri-water-flash-line"></i> Energy Development</h3>
+			<p>Building dams for hydroelectric power and flood the rainforest When submerged forest rots, the water becomes acidic. This can kill fish and other marine life. It also corrodes HEP turbines, making them short-lived. The dam can also be blocked by soil washed down by rain.</p>
 		</div>
 		<div class="float list">
-			<h3>EXAMPLE e</h3>
-			<p>example paragraph. blah blah blah.</p>
-		</div>
-		<div class="float list">
-			<h3>EXAMPLE f</h3>
-			<p>example paragraph. blah blah blah.</p>
-		</div>
-		<div class="float list">
-			<h3>EXAMPLE g</h3>
-			<p>example paragraph. blah blah blah.</p>
-		</div>
-		<div class="float list">
-			<h3>EXAMPLE h</h3>
-			<p>example paragraph. blah blah blah.</p>
+			<h3><i class='bx bx-crosshair'></i> Hunting and Poaching</h3>
+			<p>Although not directly causing deforestation, hunting and poaching destabilises the rainforest ecosystem and is prevelant in the Amazon.</p>
 		</div>
 	</div>
 </div>
