--- a/rainforest/index.html
+++ b/rainforest/index.html
@@ -42,7 +42,7 @@
 		</div>
 		<div class="float list">
 			<h3><i class="ri-drop-line"></i> Amazon River</h3>
-			<p>The longest river in the world, or second longest if the Nile is longer. No one really knows, it's hard to measure. It is, however, the largest river in the world by discharge volume of water.</p>
+			<p>The longest river in the world, or second longest if the Nile is longer. It is, however, the largest river in the world by discharge volume of water.</p>
 		</div>
 	</div>
 </div>
