--- a/example/index.html
+++ b/example/index.html
@@ -115,6 +115,12 @@
 		</a>
 	</div>
 </div>
+<div class="section picture">
+	<img class="image" src="https://placehold.co/600x400" alt="placeholder">
+	<div class="imagetxt">
+		<h3>hello there!</h3>
+	</div>
+</div>
 <div class="section example">
 	<h2><i data-feather="align-right"></i> Example TXT List</h2>
 	<div class="lists">
