different animations for pictures

--- a/example/index.html
+++ b/example/index.html
@@ -86,6 +86,13 @@
 		</a>
 	</div>
 </div>
+<div class="section picture">
+	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
+	<div class="imagetxt swipe">
+		<h3>hello there!</h3>
+		<p>i am a paragraph!</p>
+	</div>
+</div>
 <div class="section example">
 	<h2><i data-feather="align-right"></i> Example Cards</h2>
 	<div class="cards">
@@ -116,9 +123,10 @@
 	</div>
 </div>
 <div class="section picture">
-	<img class="image" src="https://placehold.co/600x400" alt="placeholder">
-	<div class="imagetxt">
+	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
+	<div class="imagetxt slide right">
 		<h3>hello there!</h3>
+		<p>i am a paragraph!</p>
 	</div>
 </div>
 <div class="section example">
@@ -212,6 +220,13 @@
 		</a>
 	</div>
 </div>
+<div class="section picture">
+	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
+	<div class="imagetxt slide left">
+		<h3>hello there!</h3>
+		<p>i am a paragraph!</p>
+	</div>
+</div>
 <div class="section example">
 	<h2><i data-feather="align-right"></i> Example Timeline</h2>
 	<div class="timeline">
@@ -257,6 +272,13 @@
 				<p>example paragraph. blah blah blah.</p>
 			</div>
 		</div>
+	</div>
+</div>
+<div class="section picture">
+	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
+	<div class="imagetxt pop">
+		<h3>hello there!</h3>
+		<p>i am a paragraph!</p>
 	</div>
 </div>
 <div class="bx-section example">
@@ -321,6 +343,13 @@
 		</a>
 	</div>
 </div>
+<div class="section picture">
+	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
+	<div class="imagetxt swipe reverse">
+		<h3>hello there!</h3>
+		<p>i am a paragraph!</p>
+	</div>
+</div>
 <div class="bx-section example">
 	<h2><i data-feather="align-right"></i> Example BX Cards</h2>
 	<div class="cards">
@@ -348,6 +377,13 @@
 			<h3>EXAMPLE 3b</h3>
 			<p>example paragraph. blah blah blah.</p>
 		</a>
+	</div>
+</div>
+<div class="section picture">
+	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
+	<div class="imagetxt pop reverse">
+		<h3>hello there!</h3>
+		<p>i am a paragraph!</p>
 	</div>
 </div>
 <div class="footer">
